El BackEnd se quitaron todas la verificaciones de seguridad